--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-My GitHub Page
+<!DOCTYPE html>
+<html>
+<head>
+	<style>
+	body{
+   		 text-align: center;
+  		 background: url("https://codecademy-content.s3.amazonaws.com/courses/web-beginner-en-3pc6w/images/avatar.jpg");
+   		 background-size: cover;
+   		 background-position: center;
+   		 background-repeat: no-repeat;
+   		 background-attachment: fixed;
+    		 color: white;
+  	 	 font-family: Helvetica;
+		}
+p {
+    font-size: 24px;
+}
+input {
+    border: 0;
+    padding: 12px;
+    font-size: 18px;
+}
+input[type="submit"] {
+    background: limegreen;
+    color: black;
+}
+</style>
+
+<title>bling bling</title>
+</head>
+
+<body>
+	<h1>Caroline</h1>
+	<img src="https://codecademy-content.s3.amazonaws.com/courses/web-beginner-en-3pc6w/images/avatar.jpg" height="250" width="250">
+	<p>Ich bin Autorin und Soziologin</p>
+	<p>Um Dich für den Newsletter anzumelden, gib bitte hier Deine Email-Adresse ein:</p>
+
+	<input type="email" placeholder="Your email">
+	<input type='submit'>
+
+	<a href="http:www.slightlyopaque.net">go here</a>
+
+	<h2>List of things I’ve done</h2>
+	<ol> 						
+		<li>slept</li>
+		<li style="font-family: Garamond, font-size: 16px">eaten cake</li>  
+	</ol>
+
+	<ol>						
+			<li>Dad's interests
+				<ul>
+					<li>football</li>
+					<li>knitting</li>
+				</ul>
+			</li>
+			<li>Mom's interests
+				<ul>
+					<li>hating football</li>
+					<li>skydiving</li>
+				</ul>
+			</li>
+		</ol>
+
+<!--Make me into a comment.--> 		
+
+</body>
+</html>
+
