--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 	<title>slightly ... opaque</title>
 </head>
-<body>
+<body id="background">
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>There will be something. Soon.</p>
