--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>There will be something. Soon.</p>
+
+ <form>
+	  <p>Do you wish to be notified when there's more?</p>
+	  <input type="text" name="email" value="E-Mail-address" />	    
+	        <p></p>
+	        <textarea></textarea>
+	        <p>Newsletter bestellen?</p>
+	        <input type="radio">Yes
+	        <input type="radio">No
+	    </form>
+
 </body>
 </html>
