--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<title>slightly ... opaque</title>
 </head>
 <body id="background">
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>There will be something. Soon.</p>
+<h1 id="slightly">Hello World</h1>
+<p class="beauty">I'm hosted with GitHub Pages.</p>
+<p class="beauty">There will be something. Soon.</p>
 
  <form>
-	  <p>Do you wish to be notified when there's more?</p>
+	  <p class="beauty">Do you wish to be notified when there's more?</p>
 	  <input type="text" name="email" value="E-Mail-address" />	    
 	        <p></p>
 	        <textarea></textarea>
