--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
  <form>
 	  <p class="beauty">Do you wish to be notified when there's more?</p>
 	  <input type="text" name="email" value="E-Mail-address" />	    
-	        <p></p>
+<!--        <p></p>
 	        <textarea></textarea>
 	        <p>Newsletter bestellen?</p>
 	        <input type="radio">Yes
-	        <input type="radio">No
+	        <input type="radio">No -->
 	    </form>
 
 </body>
