--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
  <form>
 	  <p class="beauty">Do you wish to be notified when there's more?</p>
-	  <input type="text" name="email" value="E-Mail-address" />	    
+	  <input type="text" name="email" value="E-Mail-address" class="beauty"/>	    
 <!--        <p></p>
 	        <textarea></textarea>
 	        <p>Newsletter bestellen?</p>
