--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 <p class="beauty">I'm hosted with GitHub Pages.</p>
 <p class="beauty">There will be something. Soon.</p>
 
- <form>
-	  <p class="beauty">Do you wish to be notified when there's more?</p>
-	  <input type="text" name="email" value="E-Mail-address" class="beauty"/>	    
-<!--        <p></p>
+<!-- 
+	<form>
+  	<p class="beauty">Do you wish to be notified when there's more?</p>
+	  <input type="text" name="email" value="E-Mail-address"/>	    
+	    <input type="submit">
+	        <p></p>
 	        <textarea></textarea>
 	        <p>Newsletter bestellen?</p>
 	        <input type="radio">Yes
-	        <input type="radio">No -->
-	    </form>
+	        <input type="radio">No 
+	    </form> 
+-->
 
 </body>
 </html>
