--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>slightly ... opaque</title>
 </head>
 <body id="background">
-<h1 id="slightly">Hello World</h1>
-<p class="beauty">I'm hosted with GitHub Pages.</p>
+<h1 id="slightly">slightly opaque</h1>
+
 <p class="beauty">There will be something. Soon.</p>
 
 <!-- 
