--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<title>slightly ... opaque</title>
 </head>
 <body id="background">
-<h1 id="slightly">slightly opaque</h1>
+
+<a href="www.slightlyopaque.net">slightly opaque</a> 
 
 <p class="beauty">There will be something. Soon.</p>
 
