--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body id="background">
 
-<a href="www.slightlyopaque.net">slightly opaque</a> 
+<a href="http://www.slightlyopaque.net" id="slightly">slightly opaque</a> 
 
 <p class="beauty">There will be something. Soon.</p>
 
