--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body id="background">
 
 <a href="http://www.slightlyopaque.net" id="slightly">slightly opaque</a> 
+<!-- offenbar kann ich entweder a oder id sagen, aber nicht beides... why?-->
 
 <p class="beauty">There will be something. Soon.</p>
 
