--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
 </head>
 <body id="background">
 
-<a href="http://www.slightlyopaque.net" id="slightly">slightly opaque</a> 
-<!-- offenbar kann ich entweder a oder id sagen, aber nicht beides... why?-->
+<a href="http://www.slightlyopaque.net" id="logo">slightly opaque</a> 
 
 <p class="beauty">There will be something. Soon.</p>
 
+
+<!--<p>Mein Name ist Caroline Kikisch. Ich arbeite u.a. als freie Autorin, Kultur- und Sozialwissenschaftlerin, Software Quality Assurance und Projektmanagerin. 
+</p> -->
+
 <!-- 
 	<form>
-  	<p class="beauty">Do you wish to be notified when there's more?</p>
+  	<p class="beauty">In unregelmäßigen Abständen versende ich Newsletter. Nicht zu häufig, versprochen. Interesse?</p>
 	  <input type="text" name="email" value="E-Mail-address"/>	    
 	    <input type="submit">
 	        <p></p>
@@ -23,6 +26,12 @@
 	        <input type="radio">No 
 	    </form> 
 -->
+
+<footer>
+	<div>
+<!--		<p>Caroline Kikisch | info@slightlyopaque.net</p> -->
+	</div>
+</footer>
 
 </body>
 </html>
