--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
 <body id="background">
 
-<a href="http://www.slightlyopaque.net" id="logo">slightly opaque</a> 
+	<div id="header">
+			<a href="http://www.slightlyopaque.net" id="logo">slightly opaque</a> 
+	</div>
+
 
 <p class="beauty">There will be something. Soon.</p>
 
@@ -27,9 +30,10 @@
 	    </form> 
 -->
 
-<footer>
-	<div>
-<!--		<p>Caroline Kikisch | info@slightlyopaque.net</p> -->
+
+	<div id="footer">
+		<p id="name">Caroline Kikisch</p> 
+		<a href="mailto:hush@slightlyopaque.net"><p id="email">hush@slightlyopaque.net</p></a>
 	</div>
 </footer>
 
