--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 			<a href="http://www.slightlyopaque.net" id="logo">slightly opaque</a> 
 	</div>
 
-
+<div class="block">
 <p class="beauty">There will be something. Soon.</p>
+</div>
 
 
 <!--<p>Mein Name ist Caroline Kikisch. Ich arbeite u.a. als freie Autorin, Kultur- und Sozialwissenschaftlerin, Software Quality Assurance und Projektmanagerin. 
