--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: Your New Jekyll Site
 
 <div id="home">
  <a href="/Artikel.html" >Artikel</a> 
+ <a href="/Santa-stories.html" >Santa Stories</a> 
  
  
  
