--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Your New Jekyll Site
 <div id="home">
  <a href="/Artikel.html" >Artikel</a> 
  
- <a href="/Santa-stories.html" >Santa Stories</a> 
+ <a href="/Santa.html" >Santa</a> 
  
  
  
