--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: slightly opaque ... home
 ---
 
 <div id="home">
- <a href="/Artikel.html" >Artikel</a> 
- 
- <a href="/Santa.html" >Santa</a> 
- 
- 
- 
- 
-</div>
+	<p>Writing:  
+     	<a href="/Artikel.html" >Artikel</a> 
+		<a href="/Santa.html" >Santa</a> 
+	 </p>
+     <p>Illustration.  </p> 
+	 <p>Translation.   </p>
+     <p>Quality Assurance & Project Management:
+     	<a href="https://www.xing.com/profile/Caroline_Kikisch" >XING</a>
+     	 <a href="https://de.linkedin.com/in/carolinekikisch" >LinkedIn</a>
+     	 <a href="https://www.xing.com/profile/Caroline_Kikisch" >WTF plattform</a>
+     </p>  
+</div> 
