--- a/Artikel.html
+++ b/Artikel.html
@@ -6,7 +6,13 @@ title: Your New Jekyll Site
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; {{ post.content | strip_html | truncatewords:75}} <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li>
+      	<img src="{{post.image_thumbnail}}" />
+      	<span>{{ post.date | date_to_string }}</span> 
+      	<a href="{{ post.url }}">{{ post.title }}</a>
+        <p>{{ post.content | strip_html | truncatewords:75}}</p>
+       
+      </li>
     {% endfor %}
   </ul>
   
