--- a/Santa.html
+++ b/Santa.html
@@ -5,8 +5,8 @@ title: Your New Jekyll Site
 
   <h1>Santa Posts</h1>
   <ul class="santaposts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; {{ post.content | strip_html | truncatewords:75}} <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% for post in site.categories.santa %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; {{ post.excerpt }} <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
   
