Bilder in Artikelübersicht eingefügt

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ title: slightly opaque ... home
      <p>Quality Assurance & Project Management:
      	<a href="https://www.xing.com/profile/Caroline_Kikisch" >XING</a>
      	 <a href="https://de.linkedin.com/in/carolinekikisch" >LinkedIn</a>
-     	 <a href="https://www.xing.com/profile/Caroline_Kikisch" >WTF plattform</a>
+     	 <a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" >freelancermap</a>
      </p>  
 </div> 
