--- a/Artikel.html
+++ b/Artikel.html
@@ -1,13 +1,12 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Articles
 ---
 
-<h1>Blog Posts</h1>
+ <h1>Blog Posts</h1>
 <ul class="posts">
-{% for post in site.posts %}
-<li>
-<span>{{ post.date | date_to_string }}</span> 
+ {% for post in site.categories.work %}
+  <li><span>{{ post.date | date_to_string }}</span> 
 <a href="{{ post.url }}">{{ post.title }}</a>
 <img src="{{post.image_thumbnail}}" />
 <p>{{ post.content | strip_html | truncatewords:75}}</p>
@@ -15,5 +14,3 @@ title: Your New Jekyll Site
  </li>
 {% endfor %}
 </ul>
-  
- 
