--- a/Santa.html
+++ b/Santa.html
@@ -1,13 +1,16 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: About Santa
 ---
 
   <h1>Santa Posts</h1>
-  <ul class="santaposts">
+  <ul class="posts">
     {% for post in site.categories.santa %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; {{ post.excerpt }} <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-  
- 
+  <li><span>{{ post.date | date_to_string }}</span> 
+<a href="{{ post.url }}">{{ post.title }}</a>
+<img src="{{post.image_thumbnail}}" />
+<p>{{ post.content | strip_html | truncatewords:75}}</p>
+
+ </li>
+{% endfor %}
+</ul>
