--- a/index.html
+++ b/index.html
@@ -3,16 +3,39 @@ layout: default
 title: slightly opaque ... home
 ---
 
+
 <div id="home">
-	<p>Writing:  
-     	<a href="/Artikel.html" >Artikel</a> 
-		<a href="/Santa.html" >Santa</a> 
-	 </p>
-     <p>Illustration.  </p> 
-	 <p>Translation.   </p>
-     <p>Quality Assurance & Project Management:
-     	<a href="https://www.xing.com/profile/Caroline_Kikisch" >XING</a>
-     	 <a href="https://de.linkedin.com/in/carolinekikisch" >LinkedIn</a>
-     	 <a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" >freelancermap</a>
-     </p>  
+<p>Hello and Welcome! <br>
+Please take a look around.<br>
+Enjoy.</p> 
+
+<h1>Who is it?</h1>
+
+<p>My name is Caroline Kikisch. </p> 
+<p>I am a freelancer based in Hamburg, Germany.</p> 
+<p> I am always interested in new opportunities, meeting new people and learning new skills. 
+What I have done so far:
+<ul>Social & Cultural Studies (Teaching & Research)</ul> 
+<ul>Software Quality Assurance (Web-Apps, Mobile ...)</ul>
+<ul>Release Management (Planning, Communication & Coordination)</ul>  
+<ul>Project & Product & Client Management (Strategy, Planning, Communication & Coordination between IT Dept. and shareholders ...)</ul> 
+<ul>Proof Reading & Translation (English -- German)</ul> 
+<ul>Writing (Fiction & Non-Fiction, e.g. <a href="/Artikel.html" >Artikel</a> & <a href="/Santa.html" >Santa</a>)</ul> 
+<ul></ul> 
+
+What I want to do:
+see the list above and add: 
+<ul>even more.</ul>
+
+<p>If you are interested in a potential work relation and have an interesting project at hand, don't hesitate to contact me. Maybe we can find a way to collaborate. 
+Not every project needs a dedicated project manager but someone who watches over every bit, someone who can as easily talk to the (outsourced) coders as to the clients. Someone, who knows what to look for in a new product and simultaneously 
+Especially smaller projects can often benefit from interdisciplinary approaches.
+
+
+<p>You can book me for the following tasks:</p> 
+ </p>
+<p> If you want to get in touch, please send a message to hush_at_slightlyopque.net or visit my web-profiles:  
+<ul><a href="https://www.xing.com/profile/Caroline_Kikisch" >XING</a></ul>
+<ul><a href="https://de.linkedin.com/in/carolinekikisch" >LinkedIn</a></ul>
+<ul><a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" >freelancermap</a></ul>
 </div> 
