added Navigation and Homepage Text

--- a/index.html
+++ b/index.html
@@ -4,38 +4,56 @@ title: slightly opaque ... home
 ---
 
 
-<div id="home">
+<div id="home"></div>
 <p>Hello and Welcome! <br>
 Please take a look around.<br>
 Enjoy.</p> 
 
+<img src="/images/IMG_1785.JPG" class="half-width right" />
+
 <h1>Who is it?</h1>
 
-<p>My name is Caroline Kikisch. </p> 
-<p>I am a freelancer based in Hamburg, Germany.</p> 
-<p> I am always interested in new opportunities, meeting new people and learning new skills. 
-What I have done so far:
-<ul>Social & Cultural Studies (Teaching & Research)</ul> 
-<ul>Software Quality Assurance (Web-Apps, Mobile ...)</ul>
-<ul>Release Management (Planning, Communication & Coordination)</ul>  
-<ul>Project & Product & Client Management (Strategy, Planning, Communication & Coordination between IT Dept. and shareholders ...)</ul> 
-<ul>Proof Reading & Translation (English -- German)</ul> 
-<ul>Writing (Fiction & Non-Fiction, e.g. <a href="/Artikel.html" >Artikel</a> & <a href="/Santa.html" >Santa</a>)</ul> 
-<ul></ul> 
+	<p>
+	My name is Caroline Kikisch. <br> 
+	I am a freelancer based in Hamburg, Germany.<br>
+	I am always interested in new opportunities, meeting new people and learning new skills.</p>
 
-What I want to do:
-see the list above and add: 
-<ul>even more.</ul>
+<h1>What I have done so far:</h1>
 
-<p>If you are interested in a potential work relation and have an interesting project at hand, don't hesitate to contact me. Maybe we can find a way to collaborate. 
-Not every project needs a dedicated project manager but someone who watches over every bit, someone who can as easily talk to the (outsourced) coders as to the clients. Someone, who knows what to look for in a new product and simultaneously 
-Especially smaller projects can often benefit from interdisciplinary approaches.
+<ul>
+	<li>Software Quality Assurance</li> 
+	<li>Release Management</li> 
+	<li>Project & Product & Client Management</li> 
+	<li>Consulting</li>
+	<li>Proof Reading & Translation</li> 
+	<li>Research & Teaching (Social & Cultural Studies)</li> 
+	<li>Writing and Illustration (Fiction & Non-Fiction, e.g. <a href="/Articles.html" >Articles</a> & <a href="/Santa.html" >Santa</a>)</li>
+</ul> 
 
+<h1>Skills, knowledge & personal traits:</h1>
+<ul>
+	<li>Strategic Planning</li>
+	<li>Communication & Coordination</li>
+	<li>keen eye for improvement</li>
+	<li>witty tongue to name it</li>
+	<li>Languages: German, English, French, Russian (poorly, I admit)</li>
+	<li>excellent people and cat skills</li>
+</ul>
 
-<p>You can book me for the following tasks:</p> 
- </p>
-<p> If you want to get in touch, please send a message to hush_at_slightlyopque.net or visit my web-profiles:  
-<ul><a href="https://www.xing.com/profile/Caroline_Kikisch" >XING</a></ul>
-<ul><a href="https://de.linkedin.com/in/carolinekikisch" >LinkedIn</a></ul>
-<ul><a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" >freelancermap</a></ul>
+<h1>You should contact me if:</h1> 
+<div>
+	<ul>
+		<li>... you are interested in a potential work relationship or</li>
+		<li>... have an interesting project at hand or</li>
+		<li>... you just find my profile interesting.</li>
+	</ul>
+	Not every project needs a dedicated project manager but someone who watches over every bit, someone who can as easily talk to the (outsourced) coders as to the clients. Someone, who knows what to look for in a new product and simultaneously 
+	Especially smaller projects can often benefit from interdisciplinary approaches.<br><br>
+
+	If you want to get in touch, please send a message to <a href="mailto:hush@slightlyopaque.net">hush@slightlyopaque.net</a> or visit my web-profiles: </p> 
+	<ul>
+		<li><a href="https://www.xing.com/profile/Caroline_Kikisch" >XING</a></li>
+		<li><a href="https://de.linkedin.com/in/carolinekikisch" >LinkedIn</a></li>
+		<li><a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" >freelancermap</a></li>
+	</ul>
 </div> 
