added text and style to index.html

--- a/index.html
+++ b/index.html
@@ -5,55 +5,21 @@ title: slightly opaque ... home
 
 
 <div id="home"></div>
-<p>Hello and Welcome! <br>
-Please take a look around.<br>
-Enjoy.</p> 
+<p>Hello and welcome to the refurbished home of slightly opaque!</p>
 
-<img src="/images/IMG_1785.JPG" class="half-width right" />
+<img src="/images/IMG_2735.JPG" class="half-width left" />
 
 <h1>Who is it?</h1>
 
 	<p>
 	My name is Caroline Kikisch. <br> 
-	I am a freelancer based in Hamburg, Germany.<br>
+	I work as a freelancer based in Hamburg, Germany.<br>
 	I am always interested in new opportunities, meeting new people and learning new skills.</p>
 
-<h1>What I have done so far:</h1>
+<p>I am still working on this page to increase its usability but please, be patient. I might need a little longer.<br><br>
+So far, please feel free to wander around. <br>
+In the <a href="/About">About-section</a>, you'll find something about me. No surprise here. <br>
+If you'd rather enjoy some writing, please visit <a href="/Articles">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa">Santa</a>, a slightly atypical character. 
+</p> 
 
-<ul>
-	<li>Software Quality Assurance</li> 
-	<li>Release Management</li> 
-	<li>Project & Product & Client Management</li> 
-	<li>Consulting</li>
-	<li>Proof Reading & Translation</li> 
-	<li>Research & Teaching (Social & Cultural Studies)</li> 
-	<li>Writing and Illustration (Fiction & Non-Fiction, e.g. <a href="/Articles.html" >Articles</a> & <a href="/Santa.html" >Santa</a>)</li>
-</ul> 
 
-<h1>Skills, knowledge & personal traits:</h1>
-<ul>
-	<li>Strategic Planning</li>
-	<li>Communication & Coordination</li>
-	<li>keen eye for improvement</li>
-	<li>witty tongue to name it</li>
-	<li>Languages: German, English, French, Russian (poorly, I admit)</li>
-	<li>excellent people and cat skills</li>
-</ul>
-
-<h1>You should contact me if:</h1> 
-<div>
-	<ul>
-		<li>... you are interested in a potential work relationship or</li>
-		<li>... have an interesting project at hand or</li>
-		<li>... you just find my profile interesting.</li>
-	</ul>
-	Not every project needs a dedicated project manager but someone who watches over every bit, someone who can as easily talk to the (outsourced) coders as to the clients. Someone, who knows what to look for in a new product and simultaneously 
-	Especially smaller projects can often benefit from interdisciplinary approaches.<br><br>
-
-	If you want to get in touch, please send a message to <a href="mailto:hush@slightlyopaque.net">hush@slightlyopaque.net</a> or visit my web-profiles: </p> 
-	<ul>
-		<li><a href="https://www.xing.com/profile/Caroline_Kikisch" >XING</a></li>
-		<li><a href="https://de.linkedin.com/in/carolinekikisch" >LinkedIn</a></li>
-		<li><a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" >freelancermap</a></li>
-	</ul>
-</div> 
