added text to about.html

--- a/About.html
+++ b/About.html
@@ -4,17 +4,13 @@ title: about
 ---
 
 
-<div id="home"></div>
-<p>Hello and Welcome! <br>
-Please take a look around.<br>
-Enjoy.</p> 
-
-<img src="/images/IMG_1785.JPG" class="half-width right" />
+<div id="about">
 
 <h1>Who is it?</h1>
 
-	<p>
-	My name is Caroline Kikisch. <br> 
+<img src="/images/IMG_1785.JPG" class="half-width right" />
+
+<p> My name is Caroline Kikisch. <br> 
 	I work as a freelancer based in Hamburg, Germany.<br>
 	I am always interested in new opportunities, meeting new people and learning new skills.</p>
 
@@ -30,10 +26,6 @@ Enjoy.</p>
 	<li>Writing and Illustration (Fiction & Non-Fiction, e.g. <a href="/Articles.html" >Articles</a> & <a href="/Santa.html" >Santa</a>)</li>
 </ul> 
 	
-	<p>As you can see, I am quite flexible regarding the jobs I have worked so far. <br>
-	In my opinion not every project needs a dedicated project manager or whatever you may call these people. 
-	Smaller or younger projects in particular can rarely afford a fulltime employee specialized in only one field. 
-	These projects will benefit from interdisciplinary approaches a.k.a. someone like me. </p>
 	
 <h1>Skills, knowledge & personal traits:</h1>
 <ul>
@@ -65,3 +57,4 @@ Enjoy.</p>
 		<li><a href="https://de.linkedin.com/in/carolinekikisch" >LinkedIn</a></li>
 		<li><a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" >freelancermap</a></li>
 	</ul>
+</div>
