--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@ title: slightly opaque ... home
 ---
 
 
-<div id="home"></div>
+<div id="home">
 <p>Hello and welcome to the refurbished home of slightly opaque!</p>
 
-<img src="/images/IMG_2735.JPG" class="half-width left" />
+<img src="/images/IMG_2735.JPG" class="third-width left" />
 
-<h1>Who is it?</h1>
+<h1>What is ... slightly opaque?</h1>
 
-	<p>
-	My name is Caroline Kikisch. <br> 
-	I work as a freelancer based in Hamburg, Germany.<br>
-	I am always interested in new opportunities, meeting new people and learning new skills.</p>
-
-<p>I am still working on this page to increase its usability but please, be patient. I might need a little longer.<br><br>
-So far, please feel free to wander around. <br>
-In the <a href="/About">About-section</a>, you'll find something about me. No surprise here. <br>
+<p>
+	slightly opaque is the website of Caroline Kikisch. Right, this is me. <br>
+	I am a writer and I work as a freelancer in IT. I do Quality Assurance, Project and Product Management and Consulting. Also, I like cats.<br>
+	Currently, I live and work in Hamburg, Germany. </p>
+	
+<h1>So where did you hide the ice-cream?</h1>
+<p>Okay. See, I am still working on this page to increase its usability and make it even more delightful. Please be patient with me. I am not the quickest coder (yet).<br>
+But since you are already here, please take a look around: <br> 
+In the <a href="/About">About</a> section, you'll find something about me, my work and interests. No surprise here. <br>
 If you'd rather enjoy some writing, please visit <a href="/Articles">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa">Santa</a>, a slightly atypical character. 
-</p> 
-
+<br> 
+<p>Whatever you do, do it with joy. And ice-cream.</p>
+</div>
 
