--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ title: slightly opaque ... home
 <h1>So where did you hide the ice-cream?</h1>
 <p>Okay. See, I am still working on this page to increase its usability and make it even more delightful. Please be patient with me. I am not the quickest coder (yet).<br>
 But since you are already here, please take a look around: <br> 
-In the <a href="/About">About</a> section, you'll find something about me, my work and interests. No surprise here. <br>
-If you'd rather enjoy some writing, please visit <a href="/Articles">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa">Santa</a>, a slightly atypical character. 
+In the <a href="/About.html">About</a> section, you'll find something about me, my work and interests. No surprise here. <br>
+If you'd rather enjoy some writing, please visit <a href="/Articles.html">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa.html">Santa</a>, a slightly atypical character. 
 <br> 
 <p>Whatever you do, do it with joy. And ice-cream.</p>
 </div>
