--- a/Contact.html
+++ b/Contact.html
@@ -10,4 +10,11 @@ Elsässer Straße 19<br>
 22049 Hamburg<br>
 Germany<br><br>
 
-<a href="mailto:hush@slightlyopaque.net">Email me<a/></p>
+<a href="mailto:hush@slightlyopaque.net">Email me</a></p>
+
+<p>Let's connect!</p>
+	<ul class="list_inline">
+		<li><a href="https://www.xing.com/profile/Caroline_Kikisch" >XING</a></li>
+		<li><a href="https://de.linkedin.com/in/carolinekikisch" >LinkedIn</a></li>
+		<li><a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" >freelancermap</a></li>
+	</ul>
