--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ But since you are already here, please take a look around: <br>
 In the <a href="/About.html">About</a> section, you'll find something about me, my work and interests. No surprise here. <br>
 If you'd rather enjoy some writing, please visit <a href="/Articles.html">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa.html">Santa</a>, a slightly atypical character. 
 <br> 
-And you can easily contact me <a href=/Contact.html">here</a>.<br>
+And you can easily contact me <a href="/Contact.html">here</a>.<br>
 <br>
 Whatever you do, do it with joy. And ice-cream.</p>
 </div>
