--- a/Contact.html
+++ b/Contact.html
@@ -8,9 +8,10 @@ title: Contact & Imprint
 <p> Caroline Kikisch<br>
 Elsässer Straße 19<br>
 22049 Hamburg<br>
-Germany<br><br>
+Germany</p>
 
-<a href="mailto:hush@slightlyopaque.net">Email me</a></p>
+<a href="mailto:hush@slightlyopaque.net"> <p id="email">Email me</p></a>
+
 
 <p>Let's connect!</p>
 	<ul class="list_inline">
