--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ title: slightly opaque ... home
 
 <p>
 	slightly opaque is the website of Caroline Kikisch. Right, this is me. <br>
-	I am a writer and I work as a freelancer in IT. I do Quality Assurance, Project and Product Management and Consulting. Also, I like cats.<br>
+	I am a writer and I work as a freelancer in IT. <br>
+	I do Quality Assurance, Project and Product Management and Consulting. <br>
+	Also, I like cats.<br>
 	Currently, I live and work in Hamburg, Germany. </p>
 	
 <h1>So where did you hide the ice-cream?</h1>
