--- a/About.html
+++ b/About.html
@@ -53,8 +53,8 @@ title: about
 
 	If you want to get in touch, please <a href="/Contact">contact me</a> or visit me at</p>
 	<ul class="list_inline">
-		<li><a href="https://www.xing.com/profile/Caroline_Kikisch" >XING</a></li>
-		<li><a href="https://de.linkedin.com/in/carolinekikisch" >LinkedIn</a></li>
-		<li><a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" >freelancermap</a></li>
+		<li><a href="https://www.xing.com/profile/Caroline_Kikisch" target="_blank">XING</a></li>
+		<li><a href="https://de.linkedin.com/in/carolinekikisch" target="_blank">LinkedIn</a></li>
+		<li><a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" target="_blank">freelancermap</a></li>
 	</ul>
 </div>
