--- a/Contact.html
+++ b/Contact.html
@@ -15,7 +15,7 @@ Germany</p>
 
 <p>Let's connect!</p>
 	<ul class="list_inline">
-		<li><a href="https://www.xing.com/profile/Caroline_Kikisch" >XING</a></li>
-		<li><a href="https://de.linkedin.com/in/carolinekikisch" >LinkedIn</a></li>
-		<li><a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" >freelancermap</a></li>
+		<li><a href="https://www.xing.com/profile/Caroline_Kikisch" target="_blank">XING</a></li>
+		<li><a href="https://de.linkedin.com/in/carolinekikisch" target="_blank">LinkedIn</a></li>
+		<li><a href="http://www.freelancermap.de/freelancer-verzeichnis/profile/sonstiges-it-beratung/92621-profil-software-quality-assurance-und-project-management.html" target="_blank">freelancermap</a></li>
 	</ul>
