--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@ title: slightly opaque ... home
 But since you are already here, please take a look around: <br> 
 In the <a href="/About.html">About</a> section, you'll find something about me, my work and interests. No surprise here. <br>
 If you'd rather enjoy some writing, please visit <a href="/Articles.html">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa.html">Santa</a>, a slightly atypical character. 
-<br> 
-And you can easily contact me <a href="/Contact.html">here</a>.<br>
 <br>
-Whatever you do, do it with joy. And ice-cream.</p>
+And in the rare case you want to read about the transition from Apple to Linux (with hacks! Promise!), please visit the <a href="/Hacks.html">Hack-section</a>.
+<br> 
+Enjoy.</p>
 </div>
+
 
