changed mail-adress to avoid spamming

--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,12 @@ Elsässer Straße 19<br>
 22049 Hamburg<br>
 Germany</p>
 
-<a href="mailto:hush@slightlyopaque.net"> <p id="email">Email me</p></a>
+<script language="JavaScript">
+var username = "hola";
+var hostname = "slightlyopaque.net";
+var linktext = username + "@" + hostname ;
+document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+</script>
 
 
 <p>Let's connect!</p>
