--- a/index.html
+++ b/index.html
@@ -5,27 +5,18 @@ title: slightly opaque ... home
 
 
 <div id="home">
-<p>Hello and welcome to the refurbished home of slightly opaque!</p>
+<p>Hello and welcome to slightly opaque!</p>
 
 <img src="/images/IMG_2735.JPG" class="third-width left" />
 
 <h1>What is ... slightly opaque?</h1>
 
 <p>
-	slightly opaque is the website of Caroline Kikisch. Right, this is me. <br>
-	I am a writer and I work as a freelancer in IT. <br>
-	I do Quality Assurance, Project and Product Management and Consulting. <br>
-	Also, I like cats.<br>
-	Currently, I live and work in Hamburg, Germany. </p>
-	
-<h1>So where did you hide the ice-cream?</h1>
-<p>Okay. See, I am still working on this page to increase its usability and make it even more delightful. Please be patient with me. I am not the quickest coder (yet).<br>
-But since you are already here, please take a look around: <br> 
-In the <a href="/About.html">About</a> section, you'll find something about me, my work and interests. No surprise here. <br>
-If you'd rather enjoy some writing, please visit <a href="/Articles.html">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa.html">Santa</a>, a slightly atypical character. 
-<br>
-And in the rare case you want to read about the transition from Apple to Linux (with hacks! Promise!), please visit the <a href="/Hacks.html">Hacking Playground</a>!
-<br> 
+slightly opaque is the homepage of Caroline Kikisch who does several things including writing, illustrating and hacking. <br>
+I work freelance, mostly doing software quality assurance and project management but I also enjoy social and cultural studies. For more information about what I do, please see the <a href="/About.html">About</a> section.<br>
+If you'd rather enjoy some writing, please visit <a href="/Articles.html">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa.html">Santa</a>, a slightly atypical character. <br>
+Occasionally, I write about <a href="/Hacks.html">Hacking</a> and provide the links to the Github repository where you can find the scripts and small programs I wrote. <br>
+
 Enjoy!</p>
 </div>
 
