--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@ title: slightly opaque ... home
 
 
 <div id="home">
-<p>Hello and welcome to slightly opaque!</p>
 
 <img src="/images/IMG_2735.JPG" class="third-width left" />
 
@@ -13,7 +12,8 @@ title: slightly opaque ... home
 
 <p>
 slightly opaque is the homepage of Caroline Kikisch who does several things including writing, illustrating and hacking. <br>
-I work freelance, mostly doing software quality assurance and project management but I also enjoy social and cultural studies. For more information about what I do, please see the <a href="/About.html">About</a> section.<br>
+I work freelance, mostly doing software quality assurance and project management but I also enjoy doing research or giving lectures in social and cultural studies. <br>
+For more information about what I do, please see the <a href="/About.html">About</a> section.<br>
 If you'd rather enjoy some writing, please visit <a href="/Articles.html">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa.html">Santa</a>, a slightly atypical character. <br>
 Occasionally, I write about <a href="/Hacks.html">Hacking</a> and provide the links to the Github repository where you can find the scripts and small programs I wrote. <br>
 
