--- a/About.html
+++ b/About.html
@@ -10,9 +10,9 @@ title: about
 
 <img src="/images/IMG_1785.JPG" class="half-width right" />
 
-<p> My name is Caroline Kikisch. <br> 
-	I work as a freelancer based in Hamburg, Germany.<br>
-	I am always interested in new opportunities, meeting new people and learning new skills.</p>
+<p> 
+My name is Caroline Kikisch and I work as a freelancer based in Hamburg, Germany.<br>
+I am always interested in new projects and ideas, like to meet new people and learning new skills. Obviously, I am obsessed with the word 'new' and need to do something about it.</p>
 
 <h1>What I have done so far:</h1>
 
@@ -31,29 +31,26 @@ title: about
 <ul>
 	<li>Strategy & Planning</li>
 	<li>Communication & Coordination</li>
-	<li>Sustaining relationships to in-house co-workers and remote working teams</li>
-	<li>Excellent people and cat skills</li>
-	<li>Tools etc.: Jira / Greenhopper, GitHub ...</li>
+	<li>Tools etc.: Jira / Greenhopper, GitHub, vim ...</li>
 	<li>Languages: German, English, French, Russian (poorly, I admit)</li>
-	<li>Basic knowledge in: HTML/CSS, Ruby, JavaScript, Java</li>
+	<li>Basic knowledge in: HTML/CSS, Python, Ruby, JavaScript, bash and (security) hacking</li>
 	<li>What I bring for free: Keen eye for improvement and a witty tongue to name it</li>
-	<li>I am experienced in multiple fields, have worked in agencies, in companies and at the university.</li>
-	<li>I can talk business and I can talk tech. At least to the extend of: I know what is possible and what is not. </li>
+	<li>Excellent people and cat skills</li>
 </ul>
 
 <h1>You should contact me if:</h1> 
-	<ul>
-		<li>... you need Quality Assurance or some kind of Project or Product Management for your running or upcoming project</li>
-		<li>... you don't know exactly what you need but probably a bit of everything</li>
-		<li>... you have a promising idea and want me on board</li>
-		<li>... you want to publish my upcoming book / short story / an article</li>
-		<li>... you just like my profile</li>
-	</ul>
-	<p>I am always interested in talking to new people - be they potential colleagues, clients, freelancers or friends.<br>
+<ul>
+	<li>... you need Quality Assurance or some kind of Project or Product Management for your running or upcoming project</li>
+	<li>... you don't know exactly what you need but probably a bit of everything</li>
+	<li>... you have a promising idea and want me on board</li>
+	<li>... you want to publish my upcoming book / short story / an article</li>
+	<li>... you just like my profile</li>
+</ul>
+<p>I am always interested in talking to new people - be they potential colleagues, clients, freelancers or friends.<br>
 
-	If you want to get in touch, please <a href="/Contact">contact me</a> or visit me at</p>
-	<ul class="list_inline">
-		<li><a href="https://www.xing.com/profile/Caroline_Kikisch" target="_blank">XING</a></li>
-		<li><a href="https://de.linkedin.com/in/carolinekikisch" target="_blank">LinkedIn</a></li>
-	</ul>
+If you want to get in touch, please <a href="/Contact">contact me</a> or visit me at</br>
+<ul class="list_inline">
+	<li><a href="https://www.xing.com/profile/Caroline_Kikisch" target="_blank">XING</a></li> or 
+	<li><a href="https://de.linkedin.com/in/carolinekikisch" target="_blank">LinkedIn</a></li>
+</ul>
 </div>
