--- a/About.html
+++ b/About.html
@@ -48,7 +48,7 @@ I am always interested in new projects and ideas, like to meet new people and le
 </ul>
 <p>I am always interested in talking to new people - be they potential colleagues, clients, freelancers or friends.<br>
 
-If you want to get in touch, please <a href="/Contact">contact me</a> or visit me at</br>
+If you want to get in touch, please <a href="/Contact">contact me</a> or visit me at 
 <ul class="list_inline">
 	<li><a href="https://www.xing.com/profile/Caroline_Kikisch" target="_blank">XING</a></li> or 
 	<li><a href="https://de.linkedin.com/in/carolinekikisch" target="_blank">LinkedIn</a></li>
