update about me

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: slightly opaque ... home
 
 <p>
 slightly opaque is the homepage of Caroline Kikisch who does several things including writing, illustrating and hacking. <br>
-I work freelance, mostly doing software quality assurance and project management but I also enjoy doing research or giving lectures in social and cultural studies. <p>
+I work freelance as a cultural anthropologist / sociologist and as a consultant in IT (e.g. quality assurance and project management). <p>
 For more information about what I do and what I am interested in, please see the <a href="/About.html">About</a> section.<p>
 
 If you'd rather enjoy some writing, please visit <a href="/Articles.html">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa.html">Santa</a>, a slightly atypical character. <br>
