--- a/About.html
+++ b/About.html
@@ -19,6 +19,7 @@ I am always interested in new projects and ideas, like to meet new people and le
 <ul>
 	<li>Research & Teaching (Social & Cultural Studies)</li> 
 	<li>Consulting</li>
+	<li>Coaching</li>
 	<li>Software Quality Assurance</li> 
 	<li>Release Management</li> 
 	<li>Project & Product & Client Management</li> 
@@ -29,9 +30,9 @@ I am always interested in new projects and ideas, like to meet new people and le
 	
 <h1>Skills, knowledge & personal traits:</h1>
 <ul>
-	<li>Strategy & Planning</li>
 	<li>Communication & Coordination</li>
-	<li>Tools etc.: Jira / Greenhopper, GitHub, vim ...</li>
+	<li>Strategy & Planning</li>
+	<li>Tools etc.: Jira / Greenhopper, GitHub, vim <3 ...</li>
 	<li>Languages: German, English, French, Russian (poorly, I admit)</li>
 	<li>Basic knowledge in: HTML/CSS, Python, Ruby, JavaScript, bash and (security) hacking</li>
 	<li>What I bring for free: Keen eye for improvement and a witty tongue to name it</li>
@@ -40,6 +41,7 @@ I am always interested in new projects and ideas, like to meet new people and le
 
 <h1>You should contact me if:</h1> 
 <ul>
+	<li>... you want a new perspective</li>
 	<li>... you need Quality Assurance or some kind of Project or Product Management for your running or upcoming project</li>
 	<li>... you don't know exactly what you need but probably a bit of everything</li>
 	<li>... you have a promising idea and want me on board</li>
