changed imgae name

--- a/Coaching.html
+++ b/Coaching.html
@@ -8,7 +8,7 @@ title: Systemische Beratung in Hamburg
 
 <h1>Systemische Beratung in Hamburg</h1>
 
-<img src="/images/visitcard4.png" class="half-width right" />
+<img src="/images/visitcard4.JPG" class="half-width right" />
 
 <h2> </h2>
 <p> In der Systemischen Beratungen gehen wir immer von sozialen Systemen aus wie Familie, Partnerschaft, Freundschaft, Organisationen, Firma, Gesellschaft. <br>
