added Coaching infos

--- a/About.html
+++ b/About.html
@@ -19,7 +19,8 @@ I am always interested in new projects and ideas, like to meet new people and le
 <ul>
 	<li>Research & Teaching (Social & Cultural Studies)</li> 
 	<li>Consulting</li>
-	<li>Coaching</li>
+        <li><a href="/Coaching.html" >Coaching</a></li>
+        <li>Scrum Master / Agile Coach</li>
 	<li>Software Quality Assurance</li> 
 	<li>Release Management</li> 
 	<li>Project & Product & Client Management</li> 
