--- a/Coaching.html
+++ b/Coaching.html
@@ -12,11 +12,14 @@ title: Systemische Beratung in Hamburg
 
 <h2> </h2>
 <p> In der Systemischen Beratungen gehen wir immer von sozialen Systemen aus wie Familie, Partnerschaft, Freundschaft, Organisationen, Firma, Gesellschaft. <br>
-Wie Rosa von Praunheim sagte: Nicht der Homosexuelle ist pervers, sondern die Situation, in der er lebt.<br>
 <br>
 Auf meine Arbeit bezogen verstehe ich dies als Aufgabe, einen systemischen Blick auf die Situation zu bewahren:<br> 
-Wie kommt es zu den ewig gleichen Diskussionen in der Familie, wer profitiert davon, wenn Sie sich mit Ihrer Kollegin streiten und was würde Ihre Katze über Ihre Beziehung sagen? </p>
-<p>
+<ul>
+    <li>Wie kommt es zu den ewig gleichen Diskussionen im Team? </li>
+    <li>Wer profitiert davon, wenn Sie sich mit Ihrer Kollegin streiten?</li>
+    <li>Was würden Sie jemandem raten, der in Ihrer Situation steckt?</li>
+</ul>
+    <p>
 Ich stelle gerne Fragen. Und gemeinsam finden wir Antworten und entwickeln für Sie passende Handlungsideen.
 </p>
 
@@ -43,7 +46,5 @@ var linktext = username + "@" + hostname ;
 document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
 </script> ?
 </p>
-
-
 
 </div>
