--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ title: slightly opaque ... home
 <h1>What is ... slightly opaque?</h1>
 
 <p>
-slightly opaque is the homepage of Caroline Kikisch who does several things including writing, illustrating and hacking. <br>
-I work freelance as a cultural anthropologist / sociologist and as a consultant in IT (e.g. quality assurance and project management). <p>
+slightly opaque is the homepage of Caroline Kikisch. <br>
+I do <a href="/Coaching.html" >Coaching</a> for individuals and teams and Software Quality Assurance. Occasionally, I also participate in social / cultural anthropological studies. <br>
 For more information about what I do and what I am interested in, please see the <a href="/About.html">About</a> section.<p>
 
 If you'd rather enjoy some writing, please visit <a href="/Articles.html">Articles</a> for non-fictional texts (and rants) or meet <a href="/Santa.html">Santa</a>, a slightly atypical character. <br>
