fixed mail address

--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@ title: Contact & Imprint
 Germany</p>
 
 <script language="JavaScript">
-var username = "hola";
+var username = "hello";
 var hostname = "slightlyopaque.net";
 var linktext = username + "@" + hostname ;
 document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
