--- a/About.html
+++ b/About.html
@@ -6,54 +6,43 @@ title: about
 
 <div id="about">
 
-<h1>Who is it?</h1>
+<h1>Worum geht's?</h1>
 
 <img src="/images/IMG_1785.JPG" class="half-width right" />
 
 <p> 
-My name is Caroline Kikisch and I work as a freelancer based in Hamburg, Germany.<br>
-I am always interested in new projects and ideas, like to meet new people and learning new skills. Obviously, I am obsessed with the word 'new' and need to do something about it.</p>
+Mein Name ist Caroline Kikisch.  
+Ich arbeite als Coach und Beraterin.  
+Hierbei unterstütze ich Teams in Findungsphasen (Teambuilding) und im Umgang mit Problemen (Konfliktcoaching), sowie bei der Erarbeitung von Strategien und Visionen.  
+Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönlichen Zielen und begleite auf den Wegen dorthin.   
+</p>
 
-<h1>What I have done so far:</h1>
-
+<h2>Erfahrungen / Kenntnisse</h2>
 <ul>
-	<li>Research & Teaching (Social & Cultural Studies)</li> 
-	<li>Consulting</li>
-        <li><a href="/Coaching.html" >Coaching</a></li>
-        <li>Scrum Master / Agile Coach</li>
-	<li>Software Quality Assurance</li> 
-	<li>Release Management</li> 
-	<li>Project & Product & Client Management</li> 
-	<li>Proof Reading & Translation</li> 
-	<li>Writing and Illustration (Fiction & Non-Fiction, e.g. <a href="/Articles.html" >Articles</a> & <a href="/Santa.html" >Santa</a>)</li>
+    <li><a href="/Coaching.html" >Systemische Beratung und Coaching</a></li>
+    <li>Team- und Organisationsentwicklung</li>
+    <li>Systemische Mediation und Konfliktberatung</li>
+    <li>Supervision</li>
+    <li>Agile Coaching / Scrum Master (PSM1)</li>
+    <li>Moderation mit Lego® Serious Play®</li>
+    <li>Prozessanalyse und -beratung</li>
+    <li>Software Quality Assurance</li>
+    <li>Release Management</li> 
+    <li>Project & Product & Client Management</li> 
+    <li>Wissenschaft und Lehre (Soziologie und Kulturanthropologie)</li>
+</ul>
+
+<h2>Branchen</h2>
+    <li>IT-Branche (v.a. e-commerce und e-dating)</li>
+    <li>Verlagswesen</li>
+    <li>Wissenschaftsbetrieb / Universitäten</li>
+    <li>Agenturen</li>
 </ul> 
 	
-	
-<h1>Skills, knowledge & personal traits:</h1>
-<ul>
-	<li>Communication & Coordination</li>
-	<li>Strategy & Planning</li>
-	<li>Tools etc.: Jira / Greenhopper, GitHub, vim <3 ...</li>
-	<li>Languages: German, English, French, Russian (poorly, I admit)</li>
-	<li>Basic knowledge in: HTML/CSS, Python, Ruby, JavaScript, bash and (security) hacking</li>
-	<li>What I bring for free: Keen eye for improvement and a witty tongue to name it</li>
-	<li>Excellent people and cat skills</li>
-</ul>
 
-<h1>You should contact me if:</h1> 
-<ul>
-	<li>... you want a new perspective</li>
-	<li>... you need Quality Assurance or some kind of Project or Product Management for your running or upcoming project</li>
-	<li>... you don't know exactly what you need but probably a bit of everything</li>
-	<li>... you have a promising idea and want me on board</li>
-	<li>... you want to publish my upcoming book / short story / an article</li>
-	<li>... you just like my profile</li>
-</ul>
-<p>I am always interested in talking to new people - be they potential colleagues, clients, freelancers or friends.<br>
+<h2>Interesse?</h2>
+<p>Falls Sie Interesse an einer Zusammenarbeit haben, freue ich mich über Ihre <a href="/Contact">Kontaktaufnahme</a>.   
+Da für eine erfolgreiche Zusammenarbeit gegenseitiges Vertrauen wichtig ist, führen wir ein kostenfreies Erstgespräch um die für Sie wichtigen Themen abzustecken und zu prüfen, ob und in welcher Form eine Zusammenarbeit sinnvoll ist.
+</p>
 
-If you want to get in touch, please <a href="/Contact">contact me</a> or visit me at 
-<ul class="list_inline">
-	<li><a href="https://www.xing.com/profile/Caroline_Kikisch" target="_blank">XING</a></li> or 
-	<li><a href="https://de.linkedin.com/in/carolinekikisch" target="_blank">LinkedIn</a></li>
-</ul>
 </div>
