richtige Aboutme bla

--- a/About.html
+++ b/About.html
@@ -11,9 +11,9 @@ title: about
 <img src="/images/IMG_1785.JPG" class="half-width right" />
 
 <p> 
-Mein Name ist Caroline Kikisch.  
-Ich arbeite als Coach und Beraterin.  
-Hierbei unterstütze ich Teams in Findungsphasen (Teambuilding) und im Umgang mit Problemen (Konfliktcoaching), sowie bei der Erarbeitung von Strategien und Visionen.  
+Mein Name ist Caroline Kikisch.<br>
+Ich arbeite als Coach und Beraterin.  <br>
+Hierbei unterstütze ich Teams in Findungsphasen (Teambuilding) und im Umgang mit Problemen (Konfliktcoaching), sowie bei der Erarbeitung von Strategien und Visionen.  <br>
 Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönlichen Zielen und begleite auf den Wegen dorthin.   
 </p>
 
@@ -41,7 +41,7 @@ Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönliche
 	
 
 <h2>Interesse?</h2>
-<p>Falls Sie Interesse an einer Zusammenarbeit haben, freue ich mich über Ihre <a href="/Contact">Kontaktaufnahme</a>.   
+<p>Falls Sie Interesse an einer Zusammenarbeit haben, freue ich mich über Ihre <a href="/Contact">Kontaktaufnahme</a>.   <br>
 Da für eine erfolgreiche Zusammenarbeit gegenseitiges Vertrauen wichtig ist, führen wir ein kostenfreies Erstgespräch um die für Sie wichtigen Themen abzustecken und zu prüfen, ob und in welcher Form eine Zusammenarbeit sinnvoll ist.
 </p>
 
