richtige Aboutme bla

--- a/About.html
+++ b/About.html
@@ -33,6 +33,7 @@ Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönliche
 </ul>
 
 <h2>Branchen</h2>
+<ul>
     <li>IT-Branche (v.a. e-commerce und e-dating)</li>
     <li>Verlagswesen</li>
     <li>Wissenschaftsbetrieb / Universitäten</li>
@@ -42,7 +43,8 @@ Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönliche
 
 <h2>Interesse?</h2>
 <p>Falls Sie Interesse an einer Zusammenarbeit haben, freue ich mich über Ihre <a href="/Contact">Kontaktaufnahme</a>.   <br>
-Da für eine erfolgreiche Zusammenarbeit gegenseitiges Vertrauen wichtig ist, führen wir ein kostenfreies Erstgespräch um die für Sie wichtigen Themen abzustecken und zu prüfen, ob und in welcher Form eine Zusammenarbeit sinnvoll ist.
+Da für eine erfolgreiche Zusammenarbeit gegenseitiges Vertrauen wichtig ist, führen wir ein kostenfreies Erstgespräch. <br>
+Dabei klären wir die für Sie wichtigen Themen, sowie ob und in welcher Form eine Zusammenarbeit sinnvoll ist.
 </p>
 
 </div>
