--- a/About.html
+++ b/About.html
@@ -41,9 +41,10 @@ Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönliche
 </ul> 
 	
 
-<h2>Interesse?</h2>
-<p>Falls Sie Interesse an einer Zusammenarbeit haben, freue ich mich über Ihre <a href="/Contact">Kontaktaufnahme</a>.   <br>
-Da für eine erfolgreiche Zusammenarbeit gegenseitiges Vertrauen wichtig ist, führen wir ein kostenfreies Erstgespräch. <br>
+<h2>Interesse an einer Zusammenarbeit?</h2>
+<p>Ich freue mich über Ihre <a href="/Contact">Kontaktaufnahme</a>.   <br>
+In einem kostenfreien Erstgespräch lernen wir uns gegenseitig kennen und besprechen, wie ich Sie bei der Erreichung Ihrer Ziele unterstützen kann. 
+<br>
 Dabei klären wir die für Sie wichtigen Themen, sowie ob und in welcher Form eine Zusammenarbeit sinnvoll ist.
 </p>
 
