richtige Aboutme bla

--- a/About.html
+++ b/About.html
@@ -43,9 +43,7 @@ Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönliche
 
 <h2>Interesse an einer Zusammenarbeit?</h2>
 <p>Ich freue mich über Ihre <a href="/Contact">Kontaktaufnahme</a>.   <br>
-In einem kostenfreien Erstgespräch lernen wir uns gegenseitig kennen und besprechen, wie ich Sie bei der Erreichung Ihrer Ziele unterstützen kann. 
-<br>
-Dabei klären wir die für Sie wichtigen Themen, sowie ob und in welcher Form eine Zusammenarbeit sinnvoll ist.
+In einem kostenfreien Erstgespräch lernen wir uns gegenseitig kennen und besprechen, ob und in welcher Form eine Zusammenarbeit sinnvoll ist.
 </p>
 
 </div>
