--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@ Hierbei unterstütze ich Teams in Findungsphasen (Teambuilding) und im Umgang mi
 Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönlichen Zielen und begleite auf den Wegen dorthin.   
 </p>
 
-<h2>Erfahrungen / Kenntnisse</h2>
+<h2>Ich biete:</h2>
 <ul>
     <li><a href="/Coaching.html" >Systemische Beratung und Coaching</a></li>
     <li>Team- und Organisationsentwicklung</li>
@@ -25,15 +25,15 @@ Auf individueller Basis helfe ich ebenfalls bei der Entwicklung von persönliche
     <li>Supervision</li>
     <li>Agile Coaching / Scrum Master (PSM1)</li>
     <li>Moderation mit Lego® Serious Play®</li>
+</ul>
+
+<h2>Ich habe Erfahrungen in folgenden Bereichen und Branchen:</h2>
+<ul>
     <li>Prozessanalyse und -beratung</li>
     <li>Software Quality Assurance</li>
     <li>Release Management</li> 
     <li>Project & Product & Client Management</li> 
     <li>Wissenschaft und Lehre (Soziologie und Kulturanthropologie)</li>
-</ul>
-
-<h2>Branchen</h2>
-<ul>
     <li>IT-Branche (v.a. e-commerce und e-dating)</li>
     <li>Verlagswesen</li>
     <li>Wissenschaftsbetrieb / Universitäten</li>
