Text- und css-Anpassungen

--- a/Coaching.html
+++ b/Coaching.html
@@ -11,7 +11,7 @@ title: Systemische Beratung in Hamburg
 <img src="/images/visitcard4.JPG" class="half-width right" />
 
 <h2> </h2>
-<p> In der Systemischen Beratungen gehen wir immer von sozialen Systemen aus wie Familie, Partnerschaft, Freundschaft, Organisationen, Firma, Gesellschaft. <br>
+<p> In der Systemischen Beratung gehen wir immer von sozialen Systemen aus wie Familie, Partnerschaft, Freundschaft, Organisationen, Firma, Gesellschaft. <br>
 <br>
 Auf meine Arbeit bezogen verstehe ich dies als Aufgabe, einen systemischen Blick auf die Situation zu bewahren:<br> 
 <ul>
