--- a/Coaching.html
+++ b/Coaching.html
@@ -10,7 +10,6 @@ title: Systemische Beratung in Hamburg
 
 <img src="/images/visitcard4.JPG" class="half-width right" />
 
-<h2> </h2>
 <p> In der Systemischen Beratung gehen wir immer von sozialen Systemen aus wie Familie, Partnerschaft, Freundschaft, Organisationen, Firma, Gesellschaft. <br>
 <br>
 Auf meine Arbeit bezogen verstehe ich dies als Aufgabe, einen systemischen Blick auf die Situation zu bewahren:<br> 
@@ -29,12 +28,11 @@ Wenn das Anliegen und Ihre Erwartungen an die Beratung geklärt sind, vereinbare
 Seien Sie also gespannt. :)
 </p>
 
-<p>Als Systemische Beraterin arbeite ich nach folgenden Prinzipien: <br>
+<h2>Als Systemische Beraterin arbeite ich nach folgenden Prinzipien: </h2>
 <ul>
-    <li>Interdependenz:  Wir sind Teil von Systemen und Veränderungen betreffen diese Systeme, müssen diese also mitdenken.</li>
-    <li>Respekt und Verantwortung: Der Coachee ist Experte für sein / ihr Leben und seine / ihre Situation und wird den für ihn / sie besten Weg wählen. </li>
-    <li>Offenheit: Es gibt Themen, bei denen ich zusätzliche fachliche Expertise mitbringe (z.B. im IT-Bereich oder Prozessoptimierung), bei anderen Themen greife ich ggf. auf das Wissen von Kolleg*innen zurück (z.B. durch Co-Beratung) oder empfehle Sie weiter, wenn ich denke, dass jemand anderes Sie bei der Bearbeitung Ihres Anliegens besser unterstützen kann.</li>
-
+    <li><b>Interdependenz</b>:  Wir sind Teil von Systemen und Veränderungen betreffen diese Systeme, müssen diese also mitdenken.</li>
+    <li><b>Respekt und Verantwortung</b>: Der Coachee ist Experte für sein / ihr Leben und seine / ihre Situation und wird den für ihn / sie besten Weg wählen. </li>
+    <li><b>Offenheit</b>: Es gibt Themen, bei denen ich zusätzliche fachliche Expertise mitbringe (z.B. im IT-Bereich oder Prozessoptimierung). Bei anderen Themen greife ich auf das Wissen von Kolleg*innen zurück (z.B. durch Co-Beratung) oder empfehle Sie weiter, wenn ich denke, dass jemand anderes Sie bei der Bearbeitung Ihres Anliegens besser unterstützen kann.</li>
 </ul>
 </p>
 
